--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^10.0.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
@@ -43,6 +44,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "file-loader": "^6.0.0",
+    "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.2.1"
   },
